# mnemosure

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.ko.md  README.md  pyproject.toml  requirements.txt
data/: memories.json
data/scenarios/nxtbot/: memories.json  results.json
data/scenarios/pricing/: memories.json  results.json
data/scenarios/uiux/: memories.json  results.json
docs/: DEPLOY.md  DEVPOST.md
docs/deck/: deck.ko.md  deck.md
mnemosure/: __init__.py  config.py  llm.py  mcp_server.py  qwen_client.py  reembed.py
mnemosure/demo/: __init__.py  index.html  sample_sessions.py  scenarios.py  server.py
mnemosure/evaluation/: __init__.py  answer_key.py  baseline.py  harness.py  judge.py  label.py
mnemosure/memory/: __init__.py  forget.py  models.py  recall.py  storage.py  store.py
scripts/: check_models.py  demo_compare.py  demo_curve.py  demo_eval.py  demo_eval_compare.py  demo_forget.py  demo_hallucination.py  demo_hallucination_implicit.py  demo_recall.py  demo_store.py  gen_demo_data.py  run_demo.py
