[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemosure"
dynamic = ["version"]
description = "Source-grounded memory layer for AI agents — cites its sources, says \"I don't know\" when it lacks evidence, and corrects superseded facts. MCP-ready."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "jsson" }]
keywords = ["memory", "mcp", "llm", "agent", "rag", "qwen", "grounding", "hallucination", "citation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "openai>=1.30,<2",
    "httpx>=0.27",
    "numpy>=1.24",
    "python-dotenv>=1.0",
    "mcp>=1.2",
]

[project.optional-dependencies]
# 데모 웹 서버(FastAPI)만 쓰는 추가 의존성. 미리 채운 NXTBot 스냅샷은 레포에만 있으므로,
# 사전계산된 데모를 그대로 보려면 이 저장소를 클론해서 실행한다.
demo = ["fastapi>=0.110", "uvicorn>=0.29"]

[project.scripts]
mnemosure-mcp = "mnemosure.mcp_server:main"

[project.urls]
Homepage = "https://github.com/jsiksn/mnemosure"
Repository = "https://github.com/jsiksn/mnemosure"
Issues = "https://github.com/jsiksn/mnemosure/issues"

[tool.hatch.version]
path = "mnemosure/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["mnemosure"]

[tool.hatch.build.targets.sdist]
# 소스 배포엔 패키지 + 라이선스/README 만. 데모 데이터·개발 스크립트·가상환경은 제외.
include = ["mnemosure", "README.md", "README.ko.md", "LICENSE", "pyproject.toml"]
