[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemosure"
dynamic = ["version"]
description = "Source-grounded memory layer for AI agents — cites its sources, says \"I don't know\" when it lacks evidence, and corrects superseded facts. MCP-ready."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "jsson" }]
keywords = ["memory", "mcp", "llm", "agent", "rag", "qwen", "grounding", "hallucination", "citation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "openai>=1.30,<2",
    "httpx>=0.27",
    "numpy>=1.24",
    "python-dotenv>=1.0",
    "mcp>=1.2",
]

[project.scripts]
mnemosure-mcp = "mnemosure.mcp_server:main"

[project.urls]
Homepage = "https://github.com/jsiksn/mnemosure"
Repository = "https://github.com/jsiksn/mnemosure"
Issues = "https://github.com/jsiksn/mnemosure/issues"

[tool.hatch.version]
path = "mnemosure/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["mnemosure"]
# 데모(demo/)·평가(evaluation/)는 제품이 아니라 데모/개발용(데이터도 미포함) → pip 패키지에서 제외.
# 코어(config·qwen_client·mcp_server·memory)만 배포. 데모/평가는 GitHub 레포에서 사용.
exclude = ["mnemosure/demo", "mnemosure/evaluation"]

[tool.hatch.build.targets.sdist]
# 소스 배포엔 코어 패키지 + 라이선스/README 만. 데모/평가·데이터·개발 스크립트·가상환경은 제외.
include = ["mnemosure", "README.md", "README.ko.md", "LICENSE", "pyproject.toml"]
exclude = ["mnemosure/demo", "mnemosure/evaluation"]
